objects/Survey_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnswerText__c</fullName>
        <formula>Answer__r.Answer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnswerText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Sequence__c</fullName>
        <label>Answer Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Survey Configurations</relationshipLabel>
        <relationshipName>Survey_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CommentRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionFromText__c</fullName>
        <formula>QuestionFrom__r.Question__c</formula>
        <label>QuestionFromText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuestionFrom</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Survey Configurations</relationshipLabel>
        <relationshipName>Survey_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuestionTo</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Survey Configurations (QuestionTo)</relationshipLabel>
        <relationshipName>Survey_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Sequence__c</fullName>
        <label>Question Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starting Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Configurations</relationshipLabel>
        <relationshipName>Survey_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Survey Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>